--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 
 .list{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -96,6 +96,7 @@
 .acordeon{
 flex: 4;
 margin: 20px;
+height: 100vh;
 }
 
 .Titulo__Contenido{
