--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,14 @@ height: 100vh;
     font-weight: bold;
 }
 
+p{
+text-transform: uppercase;
+}
+
+li{
+    text-transform: uppercase;
+}
+
 .Img__Systrans{
     width: 100%;
     height: 100%;
@@ -125,4 +133,8 @@ height: 100vh;
     text-decoration: underline;
     color: rgb(7, 46, 246);
     font-weight: bold;
+}
+
+.slider__size{
+    width: 98%;
 }
